--- a/styles/styles.css
+++ b/styles/styles.css
@@ -136,15 +136,15 @@ nav .navbar-img .nav-img{
 
 .mission{
   width: 400px;
-  height: 400px;
-  padding: 20px;
+  height: 450px;
+  padding: 20px 20px;
   border-radius: 26px;
   background: rgba(79, 157, 166, 0.1);
 }
 
 .mission .mission-img{
   width: 126px;
-  height: 126px;
+  height: 130px;
 }
 .mission{
   /* nestig */
@@ -155,7 +155,6 @@ nav .navbar-img .nav-img{
   font-weight: 600;
   line-height: 36px;
   letter-spacing: 0%;
-  text-align: left;
  }
  p{
   color: rgb(66, 66, 66);
@@ -164,8 +163,7 @@ nav .navbar-img .nav-img{
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0%;
-  text-align: left;
-  margin-top: 40px;
+  text-align: justify;
  }
 }
 
@@ -345,3 +343,56 @@ footer{
   }
 }
 
+/* media query of 576 and 992 */
+
+@media screen and (min-width:576px) and (max-width:992px){
+  .container{
+    width: 100%;
+    margin: 0 auto;
+    /* border: 1px solid red; */
+  }
+  section{
+    margin: 40px 10px;
+
+  }
+  .btn{
+    padding: 8px 14px;
+    font-size: 12px;
+  }
+  nav{
+    flex-direction: column-reverse;
+  }
+  nav .navbar-img{
+    background: none;
+  }
+  .nav-title h1,.my-mission h1,.safty-content h3,.sfty h2{
+    font-size: 30px;
+    line-height: 30px;
+  }
+  nav .navbar-img .nav-img,.safty-content,.mission,.nav-content,.mission-img{
+    width: 100%;
+    height: 100%;
+  }
+  .sfty-img .safe-img{
+    width: 100%;
+    height: 100%;
+  }
+  .sfty-img{
+    width: 40%;
+    height: 50%;
+  }
+  .mission-container,.develop-container1,.safty-container{
+    flex-direction: column;
+    row-gap: 30px;
+  }
+
+  footer{
+    padding: 6px 0px;
+  }
+  .main-footer h3{
+    font-size: 22px;
+  }
+  .main-footer small{
+    font-size: 12px;
+  }
+}
